# Bo_Tong_avdk

./: .gitignore  .gitmodules  README.md  README_CN.md
components/audio_codec/aac_encode_demo/: aac_encode_demo.c
components/audio_codec/es8311/: es8311_demo.c
components/audio_codec/g722_demo/: CMakeLists.txt  Kconfig  g722_demo.c
components/audio_codec/g722_demo/simulate_file/: mono_16k_16bit.pcm
components/audio_play/: CMakeLists.txt
components/audio_play/include/: audio_play.h
components/audio_play/src/: audio_play.c  onboard_speaker_play.c
components/audio_record/: CMakeLists.txt
components/audio_record/src/: audio_record.c  onboard_mic_record.c
components/avdk_libs/: CMakeLists.txt
components/avdk_utils/: CMakeLists.txt
components/avdk_utils/include/: count_util.h  debug_dump.h  ring_buffer.h  tfcard_util.h  uart_util.h
components/avdk_utils/src/: count_util.c  debug_dump.c  tfcard_util.c  uart_util.c
components/bk_audio/audio_streams/fatfs_stream/: fatfs_coprocess.c
components/bk_peripheral/include/: lcd_panel_devices.h
components/bk_peripheral/src/: bk_peripheral.c
components/bk_peripheral/src/lcd/: lcd_panel_devices.c
components/bk_thirdparty/agora-iot-sdk/: CMakeLists.txt  Kconfig
components/bk_thirdparty/agora-iot-sdk/bk7258/libs/version_default/: readme.txt
components/bk_thirdparty/agora-iot-sdk/include/bk7256/: agora_rtc_api.h
components/bk_thirdparty/agora-iot-sdk/include/bk7258/version_default/: agora_rtc_api.h
components/bk_thirdparty/asr/wanson/: CMakeLists.txt  Kconfig
components/bk_thirdparty/asr/wanson/bk7258/group_version_words_v1/: fst_01.h
components/bk_thirdparty/asr/wanson/include/: asr.h
components/bk_thirdparty/asr/wenwen/: CMakeLists.txt  Kconfig
components/bk_thirdparty/asr/wenwen/bk7258/dual_mic/: cmd_words.txt
components/bk_thirdparty/asr/wenwen/bk7258/single_mic/: cmd_words.txt
components/bk_thirdparty/asr/wenwen/include/: mobvoi_bk7258_pipeline.h
components/bk_thirdparty/jpeg_encoder/src/: jpeg_sw_enc_test.c
components/codec/legacy/net_transfer/: CMakeLists.txt
components/display_service/: Kconfig
components/display_service/include/: lcd_spi_display_service.h
components/display_service/src/: lcd_display_service.c  lcd_qspi_display_service.c  lcd_spi_display_service.c
components/lvgl/: CMakeLists.txt  Kconfig  lv_conf.h  lv_vendor.c  lv_vendor.h
components/lvgl/hal/fatfs/: lv_fatfs.c
components/lvgl/hal/img_utility/: lv_img_utility.c  lv_img_utility.h  lv_jpeg_hw_decode.c  lv_jpeg_hw_decode.h
components/lvgl/hal/vfs/: lv_fs_bk_posix.c  lv_vfs.c  lv_vfs.h
components/lvgl/port/: lv_port_disp.c  lv_port_disp.h  lv_port_indev.c
components/lvgl/src/: lv_api_map.h  lv_conf_internal.h
components/lvgl/src/core/: lv_disp.c  lv_disp.h  lv_obj.c  lv_obj.h  lv_obj_pos.c  lv_obj_style_gen.c  lv_refr.c
components/lvgl/src/font/: Simplified_common_words.c  lv_font.mk  my_font.c
components/lvgl/src/misc/: lv_area.h  lv_color.h  lv_types.h
components/lvgl/src/widgets/: lv_label.c  lv_label.h
components/media/aud/: aud_act.c
components/media/lcd/: lcd_act.c
components/media_service/: CMakeLists.txt
components/media_service/osi_wrapper/: audio_osi_wrapper.c  video_osi_wrapper.c
components/media_service/src/: media_service.c
components/media_utils/include/: media_ipc.h
components/media_utils/src/: media_ipc.c  psram_mem_slab.c
components/multimedia/: CMakeLists.txt  Kconfig
components/multimedia/app/: aud_intf.c  aud_tras.c  media_app.c
components/multimedia/aud/: aud_tras_drv.c
components/multimedia/bt/: bt_audio_act.c
components/multimedia/camera/: camera_act.c  uvc.c
components/multimedia/comm/: frame_buffer.c
components/multimedia/core/: media_major.c  media_minor.c  media_ui.c
components/multimedia/include/: aud_intf.h  aud_intf_private.h  aud_intf_types.h  aud_tras.h  aud_tras_drv.h  frame_buffer.h  media_app.h  media_evt.h  prompt_tone.h
components/multimedia/lcd/: lcd_act.c
components/multimedia/mailbox/: media_app_mailbox.c  media_mailbox_list_util.c  media_mailbox_list_util.h  media_major_mailbox.c  media_minor_mailbox.c
components/multimedia/pipeline/: h264_encode_pipeline.c  jpeg_decode_pipeline.c  jpeg_get_pipeline.c  mux_pipeline.h  yuv_encode.h
components/multimedia/storage/: storage_app_act.c  storage_major_act.c
docs/bk7258/en/FAQ/: index.rst
docs/bk7258/zh_CN/: index.rst
(+58 files in other folders)
